- FIXED FLICKERING ON ONE OF PAGE! - Adding Videos component! - update v3 exhibition photos

--- a/src/styles/base.module.scss
+++ b/src/styles/base.module.scss
@@ -88,11 +88,11 @@ $media-medium-desktop: 1400px;
 
 .section-anchor {
     position: absolute;
-    top: -80px;
+    top: -65px;
 }
 @media (max-width: $media-large) {
     .section-anchor {
-        top: -2.7rem;
+        top: -1.8rem;
     }
 }
 
