--- a/src/styles/one-of.module.scss
+++ b/src/styles/one-of.module.scss
@@ -1,23 +1,5 @@
 @import 'base.module';
 
-.aspect-ratio-box {
-    background: white;
-}
-.aspect-ratio-box::before {
-    content: '';
-    width: 1px;
-    margin-left: -1px;
-    float: left;
-    height: 0;
-    padding-top: 1px / 1px * 100%;
-}
-.aspect-ratio-box::after {
-    /* to clear float */
-    content: '';
-    display: table;
-    clear: both;
-}
-
 .caption {
     opacity: 0.9;
     font-weight: 300;
@@ -47,12 +29,15 @@
     display: block;
     position: relative;
 
-    // padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
     margin-bottom: 2rem;
 }
-
 .section:not(:last-child) {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.section:last-child {
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .title {
